# btc-puzzle-rust

./: Cargo.toml
src/: main.rs  utils.rs
src/data/: ranges.json  wallets.json
